# pyritofile-package

./: .gitignore  README.md  notes.md  pyproject.toml  requirements.txt  setup.py
pyritofile/: __init__.py  anm.py  bin.py  mapgeo.py  rst.py  skl.py  skn.py  so.py  stream.py  structs.py
tests/: uwu.py
