[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyritofile"
version = "0.2.3"
authors = [
    { name = "GuiSaiUwU", email = "contaguardian@gmail.com" }
]
description = "Python package to deal with League of Legends files."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPLv3+" }
dependencies = [
    "xxhash >=3.5.0",
    "pyzstd >=0.16.2"
]

[project.urls]
Homepage = "https://github.com/GuiSaiUwU/pyritofile-package"

[tool.setuptools.packages.find]